2006-02-22 - johan
Significant optimizations for FreeType2 rendering from cached bitmaps.
Fixed rendering bug for overlapping characters.
File cache system consistency check added.
Bug fix for problem with zero size FreeType2 font request.

2006-02-21 - standa
FT2 antialiasing with a small help of the aranym driver which is now
able to expandArea() with 8bit chunky data (mfdb_standard = 0x0100).
Small adjustments in fixed witdth fonts detection and short font
name in the vqt_fontheader().

2006-02-21 - johan
FT2 alternative for vqt_fontheader -> PapyrusX knows about font names.
A couple of bug fixes.

2006-02-20 - standa
FT2 alternatives for vqt_xfntinfo(), vqt_getbitmap_info() and
vqt_advance() -> PapyrusX displays the text quite reasonably now.

2006-02-20 - johan
Nearly complete implementation of vqt_xfntinfo.
Preliminary implementation of vqt_fontheader.

2006-02-18 - johan
Added whole file caching system for FreeType2 engine.
Made it possible to redirect debug output to a file.

2006-02-10 - johan
Added a couple of debug options for the bitplane mouse.
Made memory settings more configurable for the RageII driver.

2006-01-20 - johan
Changed some 'int' parameter and return types to 'long' among the libc
replacement functions, to enable calls from modules with any size 'int'.
Added memchr() and memrchr().
Extended sprintf() to cover just about everything.

2006-01-19 - johan
The bitplane driver finally has a fast mouse drawing routine.

2005-12-20 - johan
Minor fix for the Bconout redirection.

2005-12-16 - standa
Made ARAnyM debug output not go through the cookie (CVS MiNT
kernel says PRIVILEGE VIOLATION if the cookie structure address
space is accessed (utility.c).
Bconout option implementation: redirects Bconout(con) output
to puts(), from the moment the physical screen workstation is opened,
and returns it afterwards (now the CVS XaAES boots again with lineafix).

2005-12-15 - johan
Some improvements to the memory allocation debug facilities.
